# devilutionx-mpq-tools

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  unpack_and_minify_mpq.py
.github/workflows/: Windows_MinGW_x86_64.yml
data/: diabdat-clx.txt  diabdat-listfile.txt  diabdat-rm.txt  hellfire-clx.txt  hellfire-listfile.txt  hellfire-rm.txt  hfmonk-clx.txt  hfmonk-listfile.txt  hfmonk-rm.txt  hfmusic-listfile.txt  hfvoice-listfile.txt  hfvoice-rm.txt  save-listfile.txt  spawn-clx.txt  spawn-listfile.txt  spawn-rm.txt
src/: extract_spell_icons.cpp  extract_spell_icons.hpp  gen_extract_spell_icons_color_distances_main.cpp  unpack_and_minify_mpq.cpp
